yamls/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  labels:
    rickandmorty.service: rickandmorty
  name: rickandmorty
spec:
  containers:
    - image: rickandmorty:latest
      name: rickandmorty
      ports:
        - containerPort: 5000
      livenessProbe:
        httpGet:
          path: /healthcheck
          port: 5000
          httpHeaders:
          - name: Custom-Header
            value: Health Probe
        initialDelaySeconds: 3
        periodSeconds: 3
      resources:
          requests:
            memory: "64Mi"
            cpu: "250m"
          limits:
            memory: "128Mi"
            cpu: "500m"
  restartPolicy: OnFailure
