yamls/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    rickandmorty.service: rickandmorty
  name: rickandmorty
spec:
  type: NodePort
  ports:
    - name: "5000"
      port: 5000
      targetPort: 5000
  selector:
    rickandmorty.service: rickandmorty
status:
  loadBalancer: {}
